--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "small-Orange-questionnaire",
+  "name": "small-orange-questionnaire",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@rsbuild/core": "^1.5.0",
     "@rsbuild/plugin-vue": "^1.1.2",
+    "@rsdoctor/rspack-plugin": "^1.2.3",
     "typescript": "^5.9.2"
   }
 }
