--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rsbuild build",
     "dev": "rsbuild dev --open",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "test": "rstest"
   },
   "dependencies": {
     "vue": "^3.5.19"
@@ -15,6 +16,7 @@
     "@rsbuild/core": "^1.5.0",
     "@rsbuild/plugin-vue": "^1.1.2",
     "@rsdoctor/rspack-plugin": "^1.2.3",
+    "@rstest/core": "^0.3.1",
     "typescript": "^5.9.2"
   }
 }
