--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "rstest"
   },
   "dependencies": {
+    "@rslint/core": "^0.1.12",
     "vue": "^3.5.19"
   },
   "devDependencies": {
