--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@rslint/core": "^0.1.12",
-    "vue": "^3.5.19"
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "vue": "^3.5.19",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@rsbuild/core": "^1.5.0",
