--- a/package.json
+++ b/package.json
@@ -1,27 +1,73 @@
 {
   "name": "small-orange-questionnaire",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "build": "rsbuild build",
-    "dev": "rsbuild dev --open",
-    "preview": "rsbuild preview",
-    "test": "rstest"
+    "build:rs": "rsbuild build",
+    "dev:rs": "rsbuild dev --open",
+    "preview:rs": "rsbuild preview",
+    "test:rs": "rstest",
+    "dev": "vite",
+    "dev:host": "vite --host",
+    "build": "vue-tsc -b && vite build",
+    "build:staging": "vue-tsc -b && vite build --mode staging",
+    "build:analyze": "vue-tsc -b && vite build --mode analyze",
+    "preview": "vite preview",
+    "preview:dist": "vite preview --port 4173",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "prepare": "husky",
+    "test": "echo 'test'",
+    "commitlint": "commitlint --edit",
+    "commit": "git-cz",
+    "release": "standard-version",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "dependencies": {
     "@rslint/core": "^0.1.12",
+    "axios": "^1.11.0",
+    "dayjs": "^1.11.15",
+    "echarts": "^6.0.0",
+    "lodash-es": "^4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.19",
-    "vue-router": "^4.5.1"
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^5.2.1",
     "@arco-design/web-vue": "^2.57.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@rsbuild/core": "^1.5.0",
     "@rsbuild/plugin-vue": "^1.1.2",
     "@rsdoctor/rspack-plugin": "^1.2.3",
     "@rstest/core": "^0.3.1",
-    "typescript": "^5.9.2"
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.3.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/tsconfig": "^0.7.0",
+    "commitizen": "^4.3.1",
+    "cross-env": "^10.0.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-git": "^1.12.0",
+    "dotenv": "^17.2.1",
+    "eslint": "^9.34.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "terser": "^5.43.1",
+    "typescript": "^5.9.2",
+    "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.0.0",
+    "vite": "^7.1.2",
+    "vite-bundle-analyzer": "^1.2.2",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-mock": "^3.0.2",
+    "vue-tsc": "^3.0.5"
   }
 }
