--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@rslint/core": "^0.1.12",
+    "@vueuse/core": "^13.8.0",
     "axios": "^1.11.0",
     "dayjs": "^1.11.15",
     "echarts": "^6.0.0",
