--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "jsx": "preserve",
-    "jsxImportSource": "vue",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES6",
-      "ES2020"
-    ],
-    "moduleDetection": "force",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "allowImportingTsExtensions": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noEmit": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "verbatimModuleSyntax": true,
-    "skipLibCheck": true,
-    "noUncheckedSideEffectImports": true
-  },
-  "include": [
-    "src/**/*",
-    "src/**/*.vue",
-    "*.d.ts"
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "files": []
 }
