feat(base): 添加@路径识别,更更新路由配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,13 @@
 {
+  "compilerOptions": {
+    // 配置 @
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
