--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "react-dnd-html5-backend": "^16.0.1",
     "vue": "^3.5.19",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
-    "vuedraggable": "^4.1.0"
+    "vue3-dnd": "^2.1.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
